Added copy of Single PHP File Gallery. Service init script sample and updated Readme with set up details for a new installation.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 .mtj.tmp
 
 # Package Files #
+/src/main/resources/scripts/arcbot-jungmi
+/src/main/resources/scripts/arcbot-marc
+/scripts/arcbot-jungmi
+/scripts/arcbot-marc
 .idea
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
