--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,13 @@
             </exclusions>
         </dependency>
 
+        <!-- Metadata Extractor -->
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
         <!-- Unit testing -->
         <dependency>
             <groupId>junit</groupId>
@@ -132,12 +139,31 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Metadata Extractor -->
+        <!-- http://mvnrepository.com/artifact/org.mockito/mockito-core -->
         <dependency>
-            <groupId>com.drewnoakes</groupId>
-            <artifactId>metadata-extractor</artifactId>
-            <version>2.8.1</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
         </dependency>
+
+        <!-- http://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>1.6.5</version>
+        </dependency>
+
+        <!-- http://mvnrepository.com/artifact/org.powermock/powermock-api-mockito -->
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>1.6.5</version>
+        </dependency>
+
+
+
+
+
 
     </dependencies>
 
