Implemented guice binding to create DirArchiver instance with assisted injected parameters.

--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
-            <version>3.0</version>
+            <version>4.1.0</version>
         </dependency>
 
         <dependency>
@@ -69,6 +69,13 @@
             <artifactId>guice-multibindings</artifactId>
             <version>4.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-assistedinject</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+
 
         <!-- jsoup HTML parser library @ http://jsoup.org/ -->
         <dependency>
