--- a/pom.xml
+++ b/pom.xml
@@ -176,11 +176,6 @@
             <version>1.3</version>
         </dependency>
 
-
-
-
-
-
     </dependencies>
 
 
@@ -227,18 +222,20 @@
                 </plugin>
 
                 <plugin>
-                    <!-- Build an executable JAR -->
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.0.2</version>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.19.1</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.surefire</groupId>
+                            <artifactId>surefire-junit4</artifactId>
+                            <version>2.19.1</version>
+                        </dependency>
+                    </dependencies>
                     <configuration>
-                        <archive>
-                            <manifest>
-                                <addClasspath>true</addClasspath>
-                                <classpathPrefix>lib/</classpathPrefix>
-                                <mainClass>org.mandfer.tools.system.Archbot</mainClass>
-                            </manifest>
-                        </archive>
+                        <excludes>
+                            <exclude>**/*_IT.java</exclude>
+                        </excludes>
                     </configuration>
                 </plugin>
 
